--- a/p2.yml
+++ b/p2.yml
@@ -1,7 +1,7 @@
 ---
 - name: Deploy a jar file
-  hosts: ribhu
-  remote_user: dheer009
+  hosts: demo
+  remote_user: ribhu
   tasks:
     - name: Copy jar file to home directory
       copy:
